objects/CBQA__c.object
<CustomObject>
    <description>Object to capture Quality Assurance recordings from Leads or Managers.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an Account Plan on the WebID associated to this record.</errorMessage>
            <filterItems>
                <field>$Source.WebID__c</field>
                <operation>equals</operation>
                <valueField>Account_Plan__c.WebID__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>QAs</relationshipLabel>
        <relationshipName>QAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QAs</relationshipLabel>
        <relationshipName>QAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broken_Links__c</fullName>
        <inlineHelpText>Are there broken links on the website?</inlineHelpText>
        <label>Broken Links</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chat__c</fullName>
        <inlineHelpText>Is Chat enabled on the dealer website?</inlineHelpText>
        <label>Chat</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_Matching_Status__c</fullName>
        <label>Color Matching Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Setup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_Matching__c</fullName>
        <inlineHelpText>Is Color Matching enabled for this website?</inlineHelpText>
        <label>Color Matching</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Engaged__c</fullName>
        <label>Dealership Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Engagement_Notes__c</fullName>
        <label>Non Engagement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Status__c</fullName>
        <description>This is intended as a data point for reports - not to be displayed on the page layout.</description>
        <formula>IF(
   OR(
      ISPICKVAL( QA_Status__c ,&quot;Completed&quot;),
      ISPICKVAL(QA_Status__c,&quot;Cancelled&quot;),
      ISPICKVAL(QA_Status__c,&quot;Closed as Duplicate&quot;)
     ), &quot;Closed&quot;,&quot;Open&quot;)</formula>
        <label>Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_Name__c</fullName>
        <inlineHelpText>If the Primary Website Vendor field is Other, you must provide the vendor name here.</inlineHelpText>
        <label>Other Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Status__c</fullName>
        <label>Pricing Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>MSRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Website_Vendor__c</fullName>
        <label>Primary Website Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>CDK Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Month__c</fullName>
        <formula>DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),1)</formula>
        <inlineHelpText>This is auto-compiled from the date the record was created.</inlineHelpText>
        <label>QA Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Status__c</fullName>
        <label>QA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specials_Status__c</fullName>
        <label>Specials Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specials Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specials__c</fullName>
        <inlineHelpText>Is this dealership signed up to use Specials?</inlineHelpText>
        <label>Specials</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>List the URL that was audited.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Being_QA_d__c</fullName>
        <description>New fields may need to be set up for SEO</description>
        <inlineHelpText>This is populated by a workflow and will be the person listed as the Owner on the Account Plan by Default.</inlineHelpText>
        <label>User Being QA&apos;d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <inlineHelpText>Is Video enabled on the dealer website?</inlineHelpText>
        <label>Video</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a WebID from the Account on this record.</errorMessage>
            <filterItems>
                <field>WebID__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>QAs</relationshipLabel>
        <relationshipName>QAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>QA</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>WebID__c</columns>
        <columns>QA_Status__c</columns>
        <columns>QA_Month__c</columns>
        <columns>Primary_Website_Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Closed_QAs</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>WebID__c</columns>
        <columns>QA_Status__c</columns>
        <columns>QA_Month__c</columns>
        <columns>Dealership_Engaged__c</columns>
        <columns>Primary_Website_Vendor__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Open_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>02 - My Closed QAs</label>
        <language>en_US</language>
        <sharedTo>
            <role>AccountAdvocate</role>
            <role>AccountAdvocateDirector</role>
            <role>AccountAdvocateManager</role>
            <roleAndSubordinatesInternal>ServiceOpsManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_QAs</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>WebID__c</columns>
        <columns>QA_Status__c</columns>
        <columns>QA_Month__c</columns>
        <columns>Dealership_Engaged__c</columns>
        <columns>Primary_Website_Vendor__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Open_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>01 - My Open QAs</label>
        <language>en_US</language>
        <sharedTo>
            <role>AccountAdvocate</role>
            <role>AccountAdvocateDirector</role>
            <role>AccountAdvocateManager</role>
            <roleAndSubordinatesInternal>ServiceOpsManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>QA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QAs</pluralLabel>
    <recordTypes>
        <fullName>AA_Website_QA</fullName>
        <active>true</active>
        <label>AA Website QA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CB_OtherVendorMustBePopulated</fullName>
        <active>true</active>
        <description>If the Primary Website Vendor is &quot;Other&quot;, the user must specify the vendor in the Other Website Vendor text field.</description>
        <errorConditionFormula>AND(NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)),
ISPICKVAL( Primary_Website_Vendor__c , &quot;Other&quot;),
OR(
ISBLANK( Other_Vendor_Name__c ),
ISNULL(Other_Vendor_Name__c)
)
)</errorConditionFormula>
        <errorDisplayField>Other_Vendor_Name__c</errorDisplayField>
        <errorMessage>Please provide the vendor name.</errorMessage>
    </validationRules>
</CustomObject>